derive/tests/snapshots/foreign_key_to_table_without_delete_methods/Currency/get_all_currencies.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `currency` table.
    pub fn get_all_currencies<'a>(&'a self) -> impl Iterator<Item = Currency> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().currency().iter()
    }
}
