derive/tests/snapshots/foreign_key_to_table_without_delete_methods/Currency/get_currency_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Currency` from the `currency` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_currency_by_id<'a>(
        &'a self,
        id: impl Into<CurrencyId> + Clone,
    ) -> Result<Currency, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().currency().id().find(id.clone().into().value()) {
            Some(currency) => Ok(currency),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "currency".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Currency` from the `currency` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_currency_by_id<'a>(
        &'a self,
        id: impl Into<CurrencyId> + Clone,
    ) -> Result<Currency, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().currency().id().find(id.clone().into().value()) {
            Some(currency) => Ok(currency),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "currency".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
