derive/tests/snapshots/foreign_key_to_table_without_delete_methods/Currency/table.snap
---
source: derive/src/characterization_tests.rs
---
// Documentation appended to the struct:
///
/// # Tables referencing the `currency` table
///
/// - the `price` table (`self`)

pub trait this_compilation_error_occurs_because_your_foreign_key_referencing_the_currency_table_needs_to_define_a_strategy_for_on_delete_or_the_currency_table_has_no_referenced_by_attribute_referencing_the_price_table {}
pub trait this_compilation_error_occurs_because_your_foreign_key_referencing_the_currency_table_needs_to_define_a_strategy_for_on_soft_delete_or_the_currency_table_has_no_referenced_by_attribute_referencing_the_price_table {}
const _: () = {
    use self::this_compilation_error_occurs_because_the_price_table_has_no_foreign_key_attribute_referencing_the_currency_table;
};
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct CurrencyId {
    value: u64,
}
impl Default for CurrencyId {
    fn default() -> CurrencyId {
        CurrencyId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for CurrencyId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "CurrencyId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for CurrencyId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Currency> for CurrencyId {
    fn from(value: &Currency) -> Self {
        CurrencyId {
            value: value.id.clone(),
        }
    }
}
impl From<&Currency> for Option<CurrencyId> {
    fn from(value: &Currency) -> Option<CurrencyId> {
        Some(CurrencyId {
            value: value.id.clone(),
        })
    }
}
impl From<&CurrencyId> for Option<CurrencyId> {
    fn from(value: &CurrencyId) -> Option<CurrencyId> {
        use crate::spacetimedsl::Wrapper;
        Some(CurrencyId::new(value.value()))
    }
}
impl From<&CurrencyId> for CurrencyId {
    fn from(value: &CurrencyId) -> Self {
        use crate::spacetimedsl::Wrapper;
        CurrencyId::new(value.value())
    }
}
impl Currency {
    ///
    pub fn get_id(&self) -> CurrencyId {
        use crate::spacetimedsl::Wrapper;
        CurrencyId::new(self.id.clone())
    }
}

// Generated DSL methods:
// count_of_all_currencies
// create_currency
// get_all_currencies
// get_currency_by_id
